fix nav being behind text/banner and unclickable on mobile

--- a/_sass/custom/style.scss
+++ b/_sass/custom/style.scss
@@ -202,6 +202,9 @@ blockquote h5 {
   font-size: 16px;
   border-radius: .5em;
 }
+nav {
+  z-index: 3;
+}
 
 .new::after {
   content: "new";
